Adjust to get some info from valtown

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div id="next-meal-timebutton">
                     <div id="next-meal-time"></div>
                     <div id="next-meal-button">
-                        <a href="/assets/next-meal.ics">
+                        <a href="https://hunterparks--9c54d9aaf8af11efaf2e569c3dd06744.web.val.run/next-meal.ics">
                             <button type="button">Add to Calendar</button>
                         </a>
                     </div>
