--- a/index.html
+++ b/index.html
@@ -23,27 +23,9 @@
         </nav>
     </header>
     <main>
-        <section id="upcoming-meal">
-            <div>
-                <div id="next-meal-month"></div>
-                <div id="next-meal-timebutton">
-                    <div id="next-meal-time"></div>
-                    <div id="next-meal-button">
-                        <a href="https://hunterparks--9c54d9aaf8af11efaf2e569c3dd06744.web.val.run/next-meal.ics">
-                            <button type="button">Add to Calendar</button>
-                        </a>
-                    </div>
-                </div>
-                <div id="next-meal-daydate">
-                    <div id="next-meal-date"></div>
-                    <div id="next-meal-day"></div>
-                </div>
-                <div id="next-meal-countdown"></div>
-            </div>
-        </section>
         <section>
-            <h2>Our menu will be:</h2>
-            <div id="meal-menu"></div>
+            <h2>No data available.</h2>
+            <p>Please check back later for updates on future meal dates and menus!</p>
         </section>
     </main>
     <footer></footer>
